Added the insert() function to dynamic array class in C++.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ C++/C++.xcodeproj/project.pbxproj
 C++/C++.xcodeproj/project.xcworkspace/contents.xcworkspacedata
 C++/C++.xcodeproj/project.xcworkspace/xcuserdata/richboi.xcuserdatad/UserInterfaceState.xcuserstate
 C++/C++.xcodeproj/xcuserdata/richboi.xcuserdatad/xcschemes/xcschememanagement.plist
+C++/C++.xcodeproj/
